working server building

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,8 +12,6 @@
     "resolveJsonModule": true
   },
   "include": [
-    "src/.ts",
-    "src/routes/**/.ts",
-    "src/model/*.ts"
+    "src/**/*.ts",
   ]
 }
