--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --runInBand --coverage",
     "dev": "nodemon src/main.ts",
-    "start": "tsx src/main.ts",
+    "build": "tsc -p .",
     "docker-build": "docker build -t image-backend .",
     "docker-run": "docker run -p 3000:3000 -d image-backend"
   },
@@ -28,7 +28,6 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
